Fix overflow-y scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
 
 html {
   background-color: green;
+  overflow-y: hidden;
 }
